force-app/main/default/objects/AccountContactRelation/fields/Contact_Designation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Designation__c</fullName>
    <inlineHelpText>Indicates if this is the Primary, Secondary, or Tertiary Contact related to the Account, if applicable</inlineHelpText>
    <label>Contact Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>