force-app/main/default/objects/AccountContactRelation/fields/Role_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Role_if_Other__c</fullName>
    <description>Role if other is selected on the role field</description>
    <label>Role if Other</label>
    <length>40</length>
    <type>Text</type>
</CustomField>